# NyxDeck2133

./: .gitignore  CONTRIBUTING.md  INSTALLATION.md  LICENCE  README.md  psckage.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/container/: mod.rs
src-tauri/src/cron_mod/: mod.rs
src-tauri/src/daemon/: mod.rs
src-tauri/src/rice/: mod.rs
src-tauri/src/safety/: mod.rs
src-tauri/src/theme/: mod.rs
src/scripts/: ai-console.js  cron-composer.js  daemon-workshop.js  main.js  popups.js  rice-studio.js
src/styles/: blacksite.css
