[package]
name = "nixdeck-2133"
version = "0.1.0"
description = "the blacksite control room for your linux reality"
authors = ["Splicer"]
license = "MIT"
repository = "https://github.com/yourusername/nixdeck-2133"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "http-all", "path-all", "shell-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
toml = "0.8"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic
